// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom include 1`] = `
Object {
  "win": Array [
    Object {
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`custom script 1`] = `
Object {
  "win": Array [
    Object {
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`file associations only perMachine 1`] = `"Please set perMachine to true — file associations works on Windows only if installed for all users"`;

exports[`menuCategory 1`] = `
Object {
  "win": Array [
    Object {
      "file": "Test Menu Category CustomName 1.1.0.exe",
      "safeArtifactName": "test-menu-category-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`one-click 1`] = `
Object {
  "win": Array [
    Object {
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`one-click 2`] = `
Object {
  "owner": "actperepo",
  "package": "TestApp",
  "provider": "bintray",
}
`;

exports[`perMachine, no run after finish 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
    },
    Object {
      "file": "TestApp Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
    },
  ],
}
`;

exports[`perMachine, no run after finish 2`] = `
Object {
  "provider": "generic",
  "url": "https://develar.s3.amazonaws.com/test/win",
}
`;

exports[`perMachine, no run after finish 3`] = `
Object {
  "githubArtifactName": "TestApp-Setup-1.1.0.exe",
  "path": "TestApp Setup 1.1.0.exe",
  "version": "1.1.0",
}
`;

exports[`web installer (default github) 1`] = `
Object {
  "win": Array [
    Object {
      "file": "Test App ßW Web Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.1.0.exe",
    },
    Object {
      "file": "TestApp-1.1.0-ia32.nsis.7z",
    },
    Object {
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer (default github) 2`] = `
Object {
  "githubArtifactName": "TestApp-WebSetup-1.1.0.exe",
  "path": "Test App ßW Web Setup 1.1.0.exe",
  "version": "1.1.0",
}
`;

exports[`web installer 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
    },
    Object {
      "file": "Test App ßW Web Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.1.0.exe",
    },
    Object {
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;
